Add "New Configuration" Wizard

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,10 @@
 set(yasd_SRCS
 	main.cpp
-	mainwindow.cpp
-)
+		gui/mainwindow.cpp
+		gui/dialogs/new_dialog.cpp
+		gui/dialogs/new_dialog.cpp
+		gui/pages/cars_set_page.cpp
+		gui/pages/map_page.cpp)
 
 add_executable(yasd
 	${yasd_SRCS}
