Move things around

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 set(yasd_SRCS
 	main.cpp
-		gui/main_window.cpp
-		gui/dialogs/new_dialog.cpp
-		gui/dialogs/new_dialog.cpp
-		gui/pages/cars_set_page.cpp
-		gui/pages/map_page.cpp)
+	gui/main_window.cpp
+	gui/wizards/new_wizard.cpp
+	gui/wizards/pages/cars_page.cpp
+	gui/wizards/pages/map_page.cpp
+)
 
 add_executable(yasd
 	${yasd_SRCS}
