Add preferences for cars and map

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,10 @@ set(yasd_SRCS
 	gui/wizards/new_wizard.cpp
 	gui/wizards/pages/cars_page.cpp
 	gui/wizards/pages/map_page.cpp
+	gui/dialogs/cars_dialog.cpp
+	gui/dialogs/map_dialog.cpp
+	gui/widgets/cars_widget.cpp
+	gui/widgets/map_widget.cpp
 )
 
 add_executable(yasd
