--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.5.0)
 project(yasd
         VERSION 0.0.1)
 
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 add_compile_options(-D_FORTIFY_SOURCE=2 -O2 -Wall -pedantic)
 
 set(CMAKE_AUTOMOC ON)
