Code refactoring, add configuration class, improve GUI operation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(yasd_SRCS
 	main.cpp
+	configuration.cpp
+	application.cpp
 	gui/main_window.cpp
+	gui/tabs/config_tab.cpp
 	gui/wizards/new_wizard.cpp
 	gui/wizards/pages/cars_page.cpp
 	gui/wizards/pages/map_page.cpp
@@ -14,6 +17,9 @@ add_executable(yasd
 
 target_compile_definitions(yasd
 	PRIVATE -DPROJECT_VERSION="${PROJECT_VERSION}")
+
+target_include_directories(yasd
+	PRIVATE ${PROJECT_SOURCE_DIR})
 
 target_link_libraries(yasd
 	Qt5::Widgets
