add neural network and implements genetic algorithms

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(yasd_SRCS
 	configuration.cpp
 	application.cpp
 	input.cpp
+	utils.cpp
 	windows/main_window.cpp
 	windows/track_window.cpp
 	windows/track/track.cpp
@@ -14,6 +15,10 @@ set(yasd_SRCS
 	wizards/pages/track_page.cpp
 	dialogs/cars_dialog.cpp
 	dialogs/track_dialog.cpp
+	genetic_algorithm/dna.cpp
+	genetic_algorithm/genetic_algorithm_methods.cpp
+	neural_network/neural_network.cpp
+
 )
 
 add_executable(yasd
