--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(Qt5Charts)
+
 add_executable(${PROJECT_NAME}
 	main.cpp
 	configuration.cpp
@@ -15,6 +17,7 @@ add_executable(${PROJECT_NAME}
 	dialogs/cars_dialog.cpp
 	dialogs/track_dialog.cpp
 	dialogs/config_dialog.cpp
+	dialogs/charts_dialog.cpp
 	genetic_algorithm/dna.cpp
 	genetic_algorithm/genetic_algorithm_methods.cpp
 	neural_network/neural_network.cpp
@@ -29,6 +32,7 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
 	Qt5::Widgets
 	Qt5::Gui
+	Qt5::Charts
 )
 
 set_target_properties(${PROJECT_NAME}
